# lammps_input_generator_for_mpipi

./: .gitignore  .pre-commit-config.yaml  README.md  generate_lammps_files.py  pyproject.toml
example/: .gitignore  coarse_grain.py  example.cif  example.py  render_jinja2.py  run_alpha_fold_query.py
example/templates/: rg_script.lmp.jinja
src/mpipi_lammps_gen/: alpha_fold_query.py  default_interactions.csv  default_wf_interactions.txt  domain_merge_strategies.py  generate_lammps_files.py  generate_pair_interactions.py  globular_domains.py  mdtraj_conversion.py  place_proteins.py  render_jinja2.py  sasbdb_query.py  shortest_path_graph.py  shortest_path_graph_cached.py  util.py
src/mpipi_lammps_gen/gui/: log_widget.py  main.py  navigator_widget.py  parse_file_widget.py  pipeline_widget.py  query_alphafold_widget.py  step_widget.py
src/mpipi_lammps_gen/gui/utils/: widgets.py  worker_thread.py
src/mpipi_lammps_gen/scripts/: data_frame_to_af_server.py  data_frame_to_fasta.py
tests/: test_get_lammps_data.py  test_get_shortest_path_properties.py  test_globular_domain_criterion.py  test_mdtraj_conversion.py  test_mixtures.py  test_protein_data.py  test_protein_topology.py  test_shortest_path_graph.py
tests/res/: Q9ULK0.cif
